@@ -163,7 +163,7 @@
     display: inline-block;
   }
 
-  .merge-request-no-comments {
+  .merge-request-no-comments, .merge-request-no-votes {
     opacity: 0.5;
   }
 }
