@@ -69,9 +69,34 @@ module Issuable
       case method.to_s
       when 'milestone_due_asc' then order_milestone_due_asc
       when 'milestone_due_desc' then order_milestone_due_desc
+      when 'downvotes_desc' then order_downvotes_desc
+      when 'upvotes_desc' then order_upvotes_desc
       else
         order_by(method)
       end
+    end
+
+    def order_downvotes_desc
+      order_votes_desc('thumbsdown')
+    end
+
+    def order_upvotes_desc
+      order_votes_desc('thumbsup')
+    end
+
+    def order_votes_desc(award_emoji_name)
+      issuable_table = self.arel_table
+      note_table = Note.arel_table
+
+      join_clause = issuable_table.join(note_table, Arel::Nodes::OuterJoin).on(
+        note_table[:noteable_id].eq(issuable_table[:id]).and(
+          note_table[:noteable_type].eq(self.name).and(
+            note_table[:is_award].eq(true).and(note_table[:note].eq(award_emoji_name))
+          )
+        )
+      ).join_sources
+
+      joins(join_clause).group(issuable_table[:id]).reorder("COUNT(notes.id) DESC")
     end
   end
 
