@@ -20,3 +20,7 @@
         = sort_title_milestone_soon
       = link_to page_filter_path(sort: sort_value_milestone_later) do
         = sort_title_milestone_later
+      = link_to page_filter_path(sort: sort_value_upvotes) do
+        = sort_title_upvotes
+      = link_to page_filter_path(sort: sort_value_downvotes) do
+        = sort_title_downvotes
