@@ -34,6 +34,8 @@ FactoryGirl.define do
     factory :note_on_merge_request_diff, traits: [:on_merge_request, :on_diff]
     factory :note_on_project_snippet,    traits: [:on_project_snippet]
     factory :system_note,                traits: [:system]
+    factory :downvote_note,              traits: [:award, :downvote]
+    factory :upvote_note,                traits: [:award, :upvote]
 
     trait :on_commit do
       project
@@ -63,6 +65,18 @@ FactoryGirl.define do
 
     trait :system do
       system true
+    end
+
+    trait :award do
+      is_award true
+    end
+
+    trait :downvote do
+      note "thumbsdown"
+    end
+
+    trait :upvote do
+      note "thumbsup"
     end
 
     trait :with_attachment do
